99-Diploma/35-k8s/ingress-monitoring.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  # namespace: monitoring
  labels:
    name: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /grafana(/|$)(.*)
        backend:
          service:
            name: grafana
            port: 
              number: 3000
